# UNO-game

./: CMakeLists.txt  greeting.cpp  greeting.ui  main.cpp  rules.cpp  rules.h
UNO_TEST/: CMakeLists.txt  bot_player.cpp  bot_player.h  card.cpp  card.h  client_greeting.cpp  client_greeting.h  client_greeting.ui  game.h  greeting.cpp  greeting.h  greeting.ui  inputs.cpp  inputs.h  inputs.ui  main.cpp  profilemanager.cpp  profilemanager.h  rules.h  rules.ui  server_greeting.cpp  server_greeting.h  server_greeting.ui  soundclass.cpp  soundclass.h  test_card.cpp  test_card.h  test_game.cpp  test_game.h  test_sound.cpp  test_sound.h  test_users.cpp  test_users.h  users.cpp  users.h
UNO_TEST/sounds1/: MixKit License.txt  Sound-Jay license.txt
sounds1/: ashamaluevmusic license.txt
